--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,5 +1,8 @@
 name: GitHub Metrics
 
+permissions:
+  contents: write
+
 on:
   schedule:
     - cron: "0 0 * * *"
@@ -9,19 +12,19 @@ jobs:
   metrics:
     runs-on: ubuntu-latest
     steps:
-      - uses: lowlighter/metrics@latest
+      - uses: actions/checkout@v3
+
+      - name: Generate Metrics
+        uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          filename: metrics.svg
 
           # Language stats
           plugin_languages: yes
           plugin_languages_details: percentage
           plugin_languages_limit: 10
 
-          # Force include Tailwind & CSS
-          plugin_languages_indepth: yes
-          plugin_languages_categories: markup, programming, data, prose
-
-          # Detect framework usage
+          # Topics (for Tailwind, Framer Motion, React, etc.)
           plugin_topics: yes
           plugin_topics_limit: 15
