--- a/.github/workflows/profile-cards.yml
+++ b/.github/workflows/profile-cards.yml
@@ -18,7 +18,8 @@ jobs:
         uses: vn7n24fzkq/github-profile-summary-cards@release
         with:
           USERNAME: rf26538
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
 
       - name: Commit and push
         run: |
